# MEMORIA_LLM

./: app.py  main.py  main_graph.py  main_rag.py  pyproject.toml
.chroma_ui_chain/: chroma.sqlite3
.chroma_ui_graph/: chroma.sqlite3
