[project]
name = "memoria-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.3",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "pydantic>=2.12.4",
    "streamlit>=1.51.0",
]
